# ez-cd

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
debian/: service
src/: config.rs  lib.rs
