[package]
name = "ez-cd"
version = "0.3.1"
edition = "2021"
authors = ["David Michael Weis <dweis7@gmail.com>"]
description = "Deployment system for my robots"
license = "MIT OR APACHE"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/ez-cd"
default-run = "ez-cd-cli"

[package.metadata.deb.variants.service]
name = "ez-cd-service"
assets = [
  [
    "target/release/ez-cd-service",
    "/usr/bin/",
    "755",
  ],
  [
    "config/settings.yaml",
    "/etc/ez-cd/settings.yaml",
    "644",
  ],
]
conf-files = ["/etc/ez-cd/settings.yaml"]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"
systemd-units = {}

[package.metadata.deb.variants.cli]
name = "ez-cd-cli"
assets = [
  [
    "target/release/ez-cd-cli",
    "/usr/bin/",
    "755",
  ]
]
maintainer = "David Weis <dweis7@gmail.com>"

[[bin]]
name = "ez-cd-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "ez-cd-service"
path = "src/bin/service.rs"


[dependencies]
anyhow = {version = "1.0"}
clap = {version = "4.2", features = ["derive"]}
tempdir = "0.3.7"
thiserror = "1.0"
tokio = {version = "1", features = ["full",]}
tar = "0.4"
hostname = "0.3.1"
config = "0.14"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

serde = {version = "1.0", features = ["derive"]}

serde_json = "1.0"

# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"
